--- a/.github/workflows/auto-ping.yml
+++ b/.github/workflows/auto-ping.yml
@@ -2,23 +2,23 @@ name: Auto Ping RSS
 
 on:
   schedule:
-    - cron: '*/1 * * * *'
+    - cron: '*/1 * * * *'  # Every 1 minute UTC
   workflow_dispatch:
 
 jobs:
   ping:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.x'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
 
-    - name: Install requests
-      run: pip install requests
+      - name: Install dependencies
+        run: pip install requests
 
-    - name: Run ping script
-      run: python ping_feeds.py
+      - name: Run the ping script
+        run: python ping_feeds.py
