--- a/.github/workflows/generate_pages.yml
+++ b/.github/workflows/generate_pages.yml
@@ -1,20 +1,30 @@
-name: Generate SEO Pages
+name: Generate Pages
 
 on:
-  workflow_dispatch:  # Allows you to trigger it manually
+  workflow_dispatch:
+  schedule:
+    - cron: "*/1 * * * *"  # every 1 minute
 
 jobs:
-  build:
+  build-pages:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Set up Python
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.x
+          python-version: '3.10'
 
-      - name: Run the script
-        run: python generate_pages.py
+      - name: Generate Pages
+        run: |
+          pip install -r requirements.txt
+          python generate_pages.py
+
+      - name: Commit Pages
+        run: |
+          git config user.name "GitHub Action"
+          git config user.email "action@github.com"
+          git add public/pages/
+          git commit -m "Generated pages"
+          git push || echo "No changes to commit"
