--- a/.github/workflows/deploy_pages.yml
+++ b/.github/workflows/deploy_pages.yml
@@ -1,26 +1,22 @@
-generate_pages.py - Batch Generator for 100,000+ Pages
+name: Deploy Generated Pages
 
-import os from datetime import datetime
+on:
+  push:
+    branches:
+      - main
+    paths:
+      - 'public/pages/**'
 
-output_dir = "public/pages" os.makedirs(output_dir, exist_ok=True)
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
 
-with open("data/locations.txt", "r") as f: locations = [line.strip().split(",") for line in f if "," in line]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
 
-batch_size = 100000  # Customize batch size here today = datetime.utcnow().strftime("%Y-%m-%d")
-
-for i, (country, city) in enumerate(locations[:batch_size]): slug = f"{country.lower()}{city.lower().replace(' ', '')}" filename = os.path.join(output_dir, f"{slug}.html") with open(filename, "w", encoding="utf-8") as f: f.write(f"""
-
-<!DOCTYPE html><html lang=\"en\">
-<head>
-  <meta charset=\"UTF-8\">
-  <title>Read Onyx Storm in {city}, {country}</title>
-  <meta name=\"description\" content=\"Explore the fantasy world of Onyx Storm from {city}, {country}.\">
-  <link rel=\"canonical\" href=\"https://www.respirework.com/pages/{slug}.html\">
-</head>
-<body>
-  <h1>Onyx Storm Available in {city}, {country}</h1>
-  <p>Get your digital copy now from <a href=\"https://www.respirework.com\">Respirework</a>.</p>
-  <p>Generated on {today}</p>
-</body>
-</html>
-""")print(f"✅ Generated {min(batch_size, len(locations))} pages in '{output_dir}'")
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./public
