--- a/.github/workflows/rss-redirects.yml
+++ b/.github/workflows/rss-redirects.yml
@@ -1,10 +1,3 @@
-name: Generate Redirect Pages from RSS
-
-on:
-  schedule:
-    - cron: "*/30 * * * *"  # every 30 minutes
-  workflow_dispatch:
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -17,6 +10,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
+
+      - name: Install dependencies
+        run: pip install -r requirements.txt
 
       - name: Generate redirect HTML files
         run: python generate_redirects_from_rss.py
