--- a/.github/workflows/rss-redirects.yml
+++ b/.github/workflows/rss-redirects.yml
@@ -1,5 +1,12 @@
+name: RSS Redirect Generator
+
+on:
+  schedule:
+    - cron: "*/30 * * * *"  # Every 30 minutes
+  workflow_dispatch:
+
 jobs:
-  build:
+  generate_redirects:
     runs-on: ubuntu-latest
 
     steps:
@@ -9,18 +16,21 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: '3.10'
 
-      - name: Install dependencies
+      - name: Install Python dependencies
         run: pip install -r requirements.txt
 
-      - name: Generate redirect HTML files
+      - name: Run redirect generator script
         run: python generate_redirects_from_rss.py
 
       - name: Commit and push changes
         run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          git add redirect_pages/
-          git diff-index --quiet HEAD || git commit -m "Auto-generate redirect pages from RSS"
-          git push
+          git config --global user.name "GitHub Action"
+          git config --global user.email "action@github.com"
+          git add .
+          if [ -n "$(git status --porcelain)" ]; then
+            git commit -m "Auto update: generated RSS redirect HTML files"
+            git push
+          else
+            echo "No changes to commit"
