--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: List files recursively
-        uses: ls -R
+        run: ls -R
 
       - name: Set up Python
         uses: actions/setup-python@v4
