--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -21,7 +21,7 @@ jobs:
           python-version: '3.x'
 
       - name: Run Generator
-        run: python onyx-ebook-site/generated_pages.py
+        run: python generated_pages.py
 
       - name: Commit & Push
         run: |
