--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -28,5 +28,5 @@ jobs:
           git config user.name "github-actions"
           git config user.email "actions@github.com"
           git add .
-          git commit -m "Generated next batch"
-          git push
+          git commit -m "Generated next batch" || echo "No changes to commit"
+          git push || echo "Nothing to push"
