--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -1,4 +1,4 @@
-name: Generate Pages
+name: Generate Redirect Pages
 
 on:
   schedule:
@@ -8,24 +8,25 @@ on:
 jobs:
   generate:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
+      - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: List repo contents (debug)
-        run: ls -laR
-
-      - name: Set up Python
+      - name: Set up Python 3.x
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: "3.x"
 
-      - name: Run Page Generator
-        run: python generate_pages.py
+      - name: Run generate_redirect_pages.py
+        run: |
+          python generate_redirect_pages.py
 
-      - name: Commit & Push (only if there are changes)
+      - name: Commit & Push changes
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
-          git add *.html
-          git diff --cached --quiet || (git commit -m "Generated/Updated pages" && git push)
+          git add generated_pages/
+          git commit -m "Auto-generated redirect pages & sitemap"
+          git push
+        continue-on-error: true
