--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -2,25 +2,37 @@ name: Generate Redirect Pages
 
 on:
   schedule:
-    - cron: "*/10 * * * *"  # every 10 minutes (you can change this)
+    - cron: "*/1 * * * *"  # Every minute
   workflow_dispatch:
 
 jobs:
   generate:
     runs-on: ubuntu-latest
-    env:
-      OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
     steps:
-      - name: Checkout code
+      - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Set up Python 3.x
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
 
-      - name: Install dependencies
-        run: pip install openai
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install openai
 
-      - name: Run generate_redirect_pages.py
+      - name: Set OpenAI API Key
+        run: echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" >> $GITHUB_ENV
+
+      - name: Run Script to Generate Pages
         run: python generate_redirect_pages.py
+
+      - name: Commit and Push Changes
+        run: |
+          git config user.name "github-actions"
+          git config user.email "actions@github.com"
+          git add .
+          git commit -m "Auto-generated redirect pages"
+          git push
+        continue-on-error: true
