--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -1,38 +1,34 @@
-name: Generate Redirect Pages
+name: Generate SEO Pages
 
 on:
   schedule:
-    - cron: "*/1 * * * *"  # Every minute
+    - cron: '*/5 * * * *'  # every 5 minutes
   workflow_dispatch:
 
 jobs:
-  generate:
+  generate-pages:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
+      - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Set up Python
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: '3.11'
 
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install openai
+      - name: Install OpenAI SDK
+        run: pip install openai
 
-      - name: Set OpenAI API Key
-        run: echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" >> $GITHUB_ENV
-
-      - name: Run Script to Generate Pages
+      - name: Run Generator Script
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: python generate_redirect_pages.py
 
-      - name: Commit and Push Changes
+      - name: Commit and Push
         run: |
-          git config user.name "github-actions"
-          git config user.email "actions@github.com"
-          git add .
-          git commit -m "Auto-generated redirect pages"
+          git config user.name github-actions
+          git config user.email actions@github.com
+          git add docs/
+          git commit -m "Generated SEO pages" || echo "No changes"
           git push
-        continue-on-error: true
