--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -1,24 +1,36 @@
-name: Generate Redirect Pages
+name: Generate AI Country Pages
 
 on:
   schedule:
-    - cron: '*/5 * * * *'
-  workflow_dispatch:
+    - cron: "*/1 * * * *"  # Runs every minute
+  workflow_dispatch:       # Allows manual trigger
 
 jobs:
-  build:
+  generate:
     runs-on: ubuntu-latest
+
     env:
       OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: '3.10'
 
-      - name: Install dependencies
-        run: pip install openai
+      - name: Install Python Dependencies
+        run: pip install openai==0.28
 
-      - name: Run generator
+      - name: Run Page Generator
         run: python generate_redirect_pages.py
+
+      - name: Commit and Push New Pages
+        run: |
+          git config user.name "github-actions"
+          git config user.email "actions@github.com"
+          git add *.html sitemap.xml
+          git commit -m "Generated AI content pages"
+          git push || echo "Nothing to push"
