--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -19,7 +19,7 @@ jobs:
           python-version: '3.10'
 
       - name: Run generator
-        run: python generate_seo_pages.py
+        run: python generate_redirect_pages.py
 
       - name: Set up Git for commit
         run: |
