--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -2,7 +2,7 @@ name: Generate SEO Pages
 
 on:
   schedule:
-    - cron: '*/1 * * * *'  # every 1 minute
+    - cron: '*/1 * * * *'  # Every 1 minute
   workflow_dispatch:
 
 jobs:
@@ -12,18 +12,49 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
           python-version: '3.x'
 
-      - name: Install Dependencies
-        run: pip install --upgrade pip
+      - name: Install dependencies
+        run: pip install requests
 
-      - name: Run Script
+      - name: Run SEO Page Generator
+        run: python name: Generate SEO Pages
+
+on:
+  schedule:
+    - cron: '*/1 * * * *'  # Every 1 minute
+  workflow_dispatch:
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      - name: Install dependencies
+        run: pip install requests
+
+      - name: Run SEO Page Generator
         run: python generate_redirect_pages.py
 
-      - name: Commit Changes
+      - name: Commit and Push changes
+        run: |
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git add pages/*.html sitemap.xml || echo "Nothing to add"
+          git commit -m "Auto-generate SEO pages" || echo "Nothing to commit"
+          git push
+
+      - name: Commit and Push changes
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
