--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -2,7 +2,7 @@ name: Generate SEO Pages
 
 on:
   schedule:
-    - cron: '*/1 * * * *'  # Every 1 minute
+    - cron: '*/1 * * * *'  # Run every 1 minute
   workflow_dispatch:
 
 jobs:
@@ -10,51 +10,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: '3.10'
 
       - name: Install dependencies
         run: pip install requests
 
-      - name: Run SEO Page Generator
-        run: python name: Generate SEO Pages
-
-on:
-  schedule:
-    - cron: '*/1 * * * *'  # Every 1 minute
-  workflow_dispatch:
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
-
-      - name: Install dependencies
-        run: pip install requests
-
-      - name: Run SEO Page Generator
+      - name: Generate Redirect Pages
         run: python generate_redirect_pages.py
 
-      - name: Commit and Push changes
-        run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@github.com"
-          git add pages/*.html sitemap.xml || echo "Nothing to add"
-          git commit -m "Auto-generate SEO pages" || echo "Nothing to commit"
-          git push
-
-      - name: Commit and Push changes
+      - name: Commit and push changes
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
