--- a/.github/workflows/generate_pages.yml
+++ b/.github/workflows/generate_pages.yml
@@ -1,29 +1,35 @@
-name: Generate 100k Pages in 1 minute
+name: Generate 100k Pages in 1 min
 
-on: schedule: - cron: '*/1 * * * *' workflow_dispatch:
+on:
+  schedule:
+    - cron: '*/1 * * * *'  # Every 1 minute
+  workflow_dispatch:
 
-jobs: generate: runs-on: ubuntu-latest
+jobs:
+  generate:
+    runs-on: ubuntu-latest
 
-steps:
-  - name: Checkout Repository
-    uses: actions/checkout@v3
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-  - name: Set up Python
-    uses: actions/setup-python@v4
-    with:
-      python-version: '3.10'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
 
-  - name: Install Python Dependencies
-    run: |
-      pip install requests
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests
 
-  - name: Generate SEO Pages
-    run: python generate_redirect_pages.py
+      - name: Run page generation script
+        run: python generate_pages.py
 
-  - name: Commit Changes
-    run: |
-      git config user.name "github-actions"
-      git config user.email "github-actions@github.com"
-      git add pages/*.html sitemap.xml || echo "Nothing to add"
-      git commit -m "Auto-generate SEO pages" || echo "Nothing to commit"
-      git push
+      - name: Commit and push changes
+        run: |
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git add pages/*.html sitemap.xml || echo "Nothing to add"
+          git commit -m "Auto-generate SEO pages" || echo "Nothing to commit"
+          git push
