--- a/.github/workflows/generate_pages.yml
+++ b/.github/workflows/generate_pages.yml
@@ -1,35 +1,40 @@
-name: Generate 10000000000000 Pages in 1 min
+name: Generate 10000000000000 Pages in 1 minute
 
 on:
   schedule:
-    - cron: '*/1 * * * *'  # Every 1 minute
+    - cron: '*/1 * * * *'  # Runs every 1 minutes
   workflow_dispatch:
 
 jobs:
-  generate:
+  generate-pages:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: '3.11'
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install requests
+          pip install -r requirements.txt || pip install requests
 
-      - name: Run page generation script
-        run: python generate_pages.py
+      - name: Generate SEO Pages
+        run: |
+          python generate_pages.py
 
-      - name: Commit and push changes
+      - name: Commit and Push Changes
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
-          git add pages/*.html sitemap.xml || echo "Nothing to add"
-          git commit -m "Auto-generate SEO pages" || echo "Nothing to commit"
+          git add pages/*.html sitemap.xml rss.xml || echo "Nothing to add"
+          git commit -m "Auto-generate SEO pages" || echo "No changes to commit"
           git push
+
+      - name: Ping Search Engines
+        run: |
+          curl -s "http://www.google.com/ping?sitemap=https://www.respirework.com/sitemap.xml"
+          curl -s "http://www.bing.com/ping?sitemap=https://www.respirework.com/sitemap.xml"
