--- a/.github/workflows/generate_pages.yml
+++ b/.github/workflows/generate_pages.yml
@@ -1,40 +1,40 @@
-name: Generate 10000000000000 Pages in 1 minute
+from flask import Flask, render_template, redirect, Response
+import os
 
-on:
-  schedule:
-    - cron: '*/1 * * * *'  # Runs every 1 minutes
-  workflow_dispatch:
+app = Flask(__name__)
 
-jobs:
-  generate-pages:
-    runs-on: ubuntu-latest
+with open("locations.txt") as f:
+    LOCATIONS = [line.strip().replace(",", "").replace(" ", "").lower() for line in f.readlines()]
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+with open("topics.txt") as f:
+    TOPICS = [line.strip().replace(",", "").replace(" ", "").lower() for line in f.readlines()]
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
+@app.route("/")
+def homepage():
+    return "Welcome to RespireWork.com"
 
-      - name: Install dependencies
-        run: |
-          pip install -r requirements.txt || pip install requests
+@app.route("/pages/<slug>.html")
+def seo_page(slug):
+    for loc in LOCATIONS:
+        for topic in TOPICS:
+            if slug == f"{topic}_{loc}":
+                title = f"Trending {topic.capitalize()} in {loc.capitalize()}"
+                description = f"Explore the latest on {topic} happening now in {loc.capitalize()} at RespireWork."
+                return render_template("page.html", title=title, description=description)
+    return redirect("https://www.respirework.com")
 
-      - name: Generate SEO Pages
-        run: |
-          python generate_pages.py
+@app.route("/sitemap.xml")
+def sitemap():
+    urls = []
+    for loc in LOCATIONS:
+        for topic in TOPICS:
+            slug = f"{topic}_{loc}"
+            urls.append(f"https://www.respirework.com/pages/{slug}.html")
+    xml = '<?xml version="1.0" encoding="UTF-8"?>\n<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">\n'
+    for url in urls[:100000000000000]:
+        xml += f"  <url><loc>{url}</loc></url>\n"
+    xml += '</urlset>'
+    return Response(xml, mimetype='application/xml')
 
-      - name: Commit and Push Changes
-        run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@github.com"
-          git add pages/*.html sitemap.xml rss.xml || echo "Nothing to add"
-          git commit -m "Auto-generate SEO pages" || echo "No changes to commit"
-          git push
-
-      - name: Ping Search Engines
-        run: |
-          curl -s "http://www.google.com/ping?sitemap=https://www.respirework.com/sitemap.xml"
-          curl -s "http://www.bing.com/ping?sitemap=https://www.respirework.com/sitemap.xml"
+if __name__ == "__main__":
+    app.run(debug=True, port=5000)
